@@ -1,3 +1,8 @@
+2008-03-09 Borut Razem <borut.razem AT siol.net>
+
+	* index.php: added News - sdcc 2.7.0 RC1
+	* previous.php: previous news moved from index.php
+
 2008-02-21 Borut Razem <borut.razem AT siol.net>
 
 	* index.php: added Philipp Klaus Krause to the list of developers
